<resources>
    <string name="app_name">miniCQUPT</string>
    <string name="login">登   陆</string>
    <string name="login_stuNum">请输入学号</string>
    <string name="idNum">请输入身份证后六位</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="mine_desc">请写下你对世界想说的话，就现在</string>
    <string name="mine_name">请填写用户名</string>
    <string name="course_time_table">课 表</string>
    <string name="bottom_community">社 区</string>
    <string name="bottom_question">邮 问</string>
    <string name="bottom_mine">我 的</string>
    <string name="course_name">课程名称</string>
    <string name="course_teacher">授课教师</string>
    <string name="course_time">时间（</string>
    <string name="course_location">教室</string>
    <string name="course_type">类型</string>
    <string name="course_week">周数（）</string>
    <string name="question_item_char">#</string>
    <string name="question_all">全 部</string>
    <string name="question_study">学 习</string>
    <string name="question_life">生 活</string>
    <string name="question_useless">情 感</string>
    <string name="picture">查看图片</string>
    <string name="mine_shop">积 分 商 城</string>
    <string name="about_me">与 我 相 关</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="course_dialog_time">时 间</string>
    <string name="course_dialog_week">周 数</string>
    <string name="logout">登 出</string>


</resources>
