<?xml version="1.0" encoding="utf-8"?>
<LinearLayout tools:background="@color/bg_color"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="60dp"
    android:weightSum="6"
    android:padding="30dp"
    android:gravity="center"
    android:background="@drawable/bg_dialog_course"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:layout_height="300dp"
    xmlns:tools="http://schemas.android.com/tools">

       <TextView
           android:gravity="center"
           android:id="@+id/course_name"
     android:layout_weight="1"
           android:drawablePadding="-100dp"
           android:drawableStart="@mipmap/course_name"
           android:text="@string/course_name"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           />
    <TextView
        android:gravity="center"
        android:id="@+id/course_teacher"
        android:layout_weight="1"
        android:drawablePadding="-100dp"
        android:drawableStart="@mipmap/course_teacher"
        android:text="@string/course_teacher"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />
    <TextView
        android:gravity="center"
        android:id="@+id/course_location"
        android:layout_weight="1"
        android:drawablePadding="-100dp"
        android:drawableStart="@mipmap/course_location"
        android:text="@string/course_location"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />
    <TextView
        android:gravity="center"
        android:id="@+id/course_time"
        android:layout_weight="1"

        android:drawableStart="@mipmap/course_time"
        android:text="@string/course_time"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />
    <TextView
        android:gravity="center"
        android:id="@+id/course_type"
        android:layout_weight="1"
        android:drawablePadding="-100dp"
        android:drawableStart="@mipmap/course_type"
        android:text="@string/course_type"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />
    <TextView
        android:gravity="center"
        android:id="@+id/course_week"
        android:layout_weight="1"
        android:drawableStart="@mipmap/course_time_week"
        android:text="@string/course_week"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        />

</LinearLayout>