<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:apps="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/bg_color"
    xmlns:tools="http://schemas.android.com/tools">



    <include layout="@layout/bg_layout_top_title"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/fragment_question_title"/>

    <android.support.design.widget.TabLayout
        apps:tabIndicatorColor="#6898FF"
        apps:tabIndicatorHeight="3dp"
        android:layout_width="match_parent"

        android:layout_height="wrap_content">
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"

            android:layout_height="wrap_content"
            android:text="@string/question_all" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_study" />

        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_life" />
        <android.support.design.widget.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_useless" />
    </android.support.design.widget.TabLayout>


    <android.support.v7.widget.RecyclerView
        tools:listitem="@layout/rv_fragment_question_item"
        android:id="@+id/question_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>