<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/layout_login_bg" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="145dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        app:cardElevation="3dp">

        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:orientation="vertical"
            android:weightSum="9">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_login_account"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/stuNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableBottom="@drawable/line"
                    android:drawablePadding="10dp"
                    android:gravity="bottom"
                    android:hint="@string/login_stuNum"
                    android:inputType="number"
                    android:textSize="16sp" />
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@drawable/line"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:gravity="bottom"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:src="@mipmap/ic_login_password"
                    tools:ignore="ContentDescription" />

                <EditText
                    android:id="@+id/idNum"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:drawableBottom="@drawable/line"
                    android:drawablePadding="10dp"
                    android:gravity="bottom"
                    android:hint="@string/idNum"
                    android:inputType="number"
                    android:textSize="16sp" />
            </LinearLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:src="@drawable/line"
                tools:ignore="ContentDescription" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <Button
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:layout_margin="8dp"
                android:background="@drawable/bg_login_button"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>


</RelativeLayout>